--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
         height: 100vh;
         margin: 0;
-        overflow: hidden;
+        overflow-x: hidden;
         padding: 2rem;
         color: white;
         font: 1.3rem Inconsolata, monospace;
@@ -42,7 +42,7 @@
   <body>
     <pre>
       <output>
-<a href="https://draft-fett-oauth-dpop-00.herokuapp.com/auth?client_id=dpop-heroku&response_type=code&scope=openid">Start auth</a>
+<a href="https://op.panva.cz/auth?client_id=dpop-heroku&response_type=code&scope=openid">Start auth</a>
       </output>
     </pre>
   </body>
